[package]
name = "luks"
version = "0.1.3"
edition = "2024"
description = "Pure-Rust Library for the Linux Unified Key Setup"
repository = "https://github.com/louib/luks-rs"
homepage = "https://github.com/louib/luks-rs"
license = "MIT"

readme = "README.md"

include = [
  "src/",
  "README.md",
  "LICENSE",
]

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
