[package]
name = "luks"
version = "0.1.6"
edition = "2024"
description = "Pure-Rust Library for the Linux Unified Key Setup"
repository = "https://github.com/louib/luks-rs"
homepage = "https://github.com/louib/luks-rs"
license = "MIT"

readme = "README.md"

include = [
  "src/",
  "examples/",
  "README.md",
  "LICENSE",
]

[dependencies]
argon2 = "0.5"
base64 = "0.22"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
